--- a/Brief/CompletedBriefTableViewCell.xib
+++ b/Brief/CompletedBriefTableViewCell.xib
@@ -7,15 +7,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="90" id="KGk-i7-Jjw" customClass="CompletedBriefTableViewCell" customModule="Brief">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="142" id="KGk-i7-Jjw" customClass="CompletedBriefTableViewCell" customModule="Brief">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="142"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dLb-fB-ByK">
-                        <rect key="frame" x="0.0" y="8" width="20" height="74"/>
+                        <rect key="frame" x="0.0" y="29" width="20" height="74"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6AG-WY-bKk" userLabel="View 1">
                                 <rect key="frame" x="3" y="0.0" width="20" height="20"/>
@@ -32,15 +32,16 @@
                         </subviews>
                     </view>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="264" translatesAutoresizingMaskIntoConstraints="NO" id="8y6-lT-qzs" userLabel="Content Label">
-                        <rect key="frame" x="20" y="8" width="264" height="74"/>
+                        <rect key="frame" x="20" y="29" width="264" height="74.5"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="8y6-lT-qzs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="JnS-Xc-SgX"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="8y6-lT-qzs" secondAttribute="bottom" constant="0.5" id="bwa-nn-Ued"/>
+                    <constraint firstItem="8y6-lT-qzs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="21" id="1QO-1o-1Pa"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="8y6-lT-qzs" secondAttribute="bottom" constant="30.5" id="9Vx-OT-ceF"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="dLb-fB-ByK" secondAttribute="bottom" constant="31" id="FwU-O3-h16"/>
                     <constraint firstItem="dLb-fB-ByK" firstAttribute="top" secondItem="8y6-lT-qzs" secondAttribute="top" id="vWh-tf-lHq"/>
                 </constraints>
             </tableViewCellContentView>
@@ -50,7 +51,7 @@
                 <outlet property="view2" destination="qQs-TX-d6P" id="Qzc-pN-N9T"/>
                 <outlet property="view3" destination="7BD-pL-1eN" id="daF-IC-jTt"/>
             </connections>
-            <point key="canvasLocation" x="64" y="482"/>
+            <point key="canvasLocation" x="64" y="508"/>
         </tableViewCell>
     </objects>
 </document>
